--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,17 @@
 
 html, body {
   height: 100%;
+  overscroll-behavior-y: none;
 }
 
 body {
   margin: 0;
   min-width: 320px;
+  -webkit-tap-highlight-color: transparent;
+}
+
+button, a {
+  touch-action: manipulation;
 }
 
 a {
